--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,14 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-  <listener>
+  <!-- <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <context-param>
+    </listener> -->
+   <!--  <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/dispatcher-servlet.xml
         </param-value>
-    </context-param>
+    </context-param> -->
 
     <servlet>
         <servlet-name>dispatcher</servlet-name>
